--- a/teaming/index.html
+++ b/teaming/index.html
@@ -22,11 +22,11 @@
 
       <tr style="padding:0px">
         <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-          <h2 style="display:flex;align-items:center;">
+          <h1 style="display:flex;align-items:center;">
             <span
               style="background-color: cyan ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             AI Teaming and Fairness
-          </h2>
+          </h1>
           <p><mark style="color:red;"><b>NEW!</b></mark> Our <a
               href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
             that presents a novel system to recommend teams using
@@ -167,7 +167,7 @@
 
 
           <p><i><b>Representative Publications</b></i></p>
-          <ul>
+          <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call
               for Proposals
               <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence
@@ -199,32 +199,35 @@
               <br>
             </li>
             <br>
-              
+
             <center>
-            <div>
-            <figure class="imageLeft">
-              <img class="top" src="images/ultra_teaming_setup.png" width="350" height="250"/>
-              <figcaption> Figure 1: Teaming setup of ULTRA.</figcaption>
-            </figure>
-            <figure class="imageRight">
-              <img class="average" src="images/ultra_system_architecture.png" width="350" height="250"/>
-              <figcaption> Figure 2: System architecture of ULTRA.</figcaption>
-            </figure>
-          </div>
-        </center>
+              <div>
+                <figure class="imageLeft">
+                  <img class="top" src="images/ultra_teaming_setup.png" width="350" height="250" />
+                  <figcaption> Figure 1: Teaming setup of ULTRA.</figcaption>
+                </figure>
+                <figure class="imageRight">
+                  <img class="average" src="images/ultra_system_architecture.png" width="350" height="250" />
+                  <figcaption> Figure 2: System architecture of ULTRA.</figcaption>
+                </figure>
+              </div>
+            </center>
 
           </ul>
           <p><i><b>Additional Tools</b></i></p>
-          <ul>
+          <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br>
               <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a>
               <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a>
               <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf"
                 target="_blank"><b>[Paper]</b></a>
               <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a>
-
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-              <br><br>
+              <br>
+              <p align="justify">KITE is an unsupervised system for exploring textual data which can generate insights
+                from a general as well as a domain-dependent perspective consisting of holistic views, entity-centric
+                view, events view, domain-specific interpretation using industry taxonomies and a detailed full-text
+                view transparently connecting the document to insight elements.</p>
               <center><img src="./images/kite.png" height="200" width="60%"><br>
                 <figcaption>Figure 3: Using KITE</figcaption>
               </center>
@@ -232,7 +235,9 @@
             <br>
             <li>[2022] A Text-to-Classification Mapper (Using ACM/JEL Subject Ontology Codes).<br>
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a>
-              <br><br>
+              <br>
+              <p align="justify">Mapper is a tool that takes the input as a text and matching threshold as a number and
+                returns the ACM or JEL classification codes and description based on the input text. </p>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
