--- a/teaming/index.html
+++ b/teaming/index.html
@@ -28,10 +28,14 @@
             AI Teaming and Fairness
           </h1>
           <p><mark style="color:red;"><b>NEW!</b></mark> Our <a
-              href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a> that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/" style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <i>Innovative Application</i> award.</p>
+              href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
+            that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
+              href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
+              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <i>Innovative
+              Application</i> award.</p>
 
-          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Group Recommendation and
-                Fairness</b></span><br>
+          <p style="text-align: justify;"><h3><span style="background-color: aqua;"><b>Group Recommendation and
+                Fairness</b></span></h3>
             <i><b>Authors: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                 target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a
@@ -85,7 +89,7 @@
 
           <hr>
 
-          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Formation</b></span><br>
+          <p style="text-align: justify;"><h3><span style="background-color: aqua;"><b>Team Formation</b></span></h3>
             <i><b>Technical Lead: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i><br>
             <i><b>Collaborators over the years: </b>
