--- a/teaming/index.html
+++ b/teaming/index.html
@@ -34,16 +34,16 @@
               style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <i>Innovative
               Application</i> award.</p>
 
-          <p style="text-align: justify;"><h3><span style="background-color: aqua;"><b>Group Recommendation and
+          <p style="text-align: justify;">
+          <h3><span style="background-color: aqua;"><b>Group Recommendation and
                 Fairness</b></span></h3>
-            <i><b>Authors: </b><a target="_blank"
-                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
-                target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a
-                target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
-                Huhns</a>, <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam
-                Natarajan</a></i>
-            <br>
+          <i><b>Authors: </b><a target="_blank"
+              href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
+              target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+              Huhns</a>, <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam
+              Natarajan</a></i>
+          <br>
           </p>
           <p align="justify"><img id="myImg" src="images/group_recommendation.jpg"
               alt="Group Recommendation - Research Potential, Methods, and Fairness"
@@ -89,34 +89,35 @@
 
           <hr>
 
-          <p style="text-align: justify;"><h3><span style="background-color: aqua;"><b>Team Formation</b></span></h3>
-            <i><b>Technical Lead: </b><a target="_blank"
-                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i><br>
-            <i><b>Collaborators over the years: </b>
-              <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
-              <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
-              <a target="_blank" href="https://www.linkedin.com/in/m-xander-widener/">Michael Widener</a>, Rohit Sharma,
-              <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
-              <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
-              <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
-                Hetherington</a>
-            </i><br>
-            <i><b>External Collaborators: </b>
-              <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
-              <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
-              <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
-              <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
-              <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
-            </i><br>
-            <i><b>Advisors: </b><a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
-                Matthews</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
-                Ziehl</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
-                Huhns</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
-                McElwain</a></i><br>
+          <p style="text-align: justify;">
+          <h3><span style="background-color: aqua;"><b>Team Formation</b></span></h3>
+          <i><b>Technical Lead: </b><a target="_blank"
+              href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i><br>
+          <i><b>Collaborators over the years: </b>
+            <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
+            <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
+            <a target="_blank" href="https://www.linkedin.com/in/m-xander-widener/">Michael Widener</a>, Rohit Sharma,
+            <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
+            <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
+            <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
+              Hetherington</a>
+          </i><br>
+          <i><b>External Collaborators: </b>
+            <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
+            <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
+            <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
+            <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
+            <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
+          </i><br>
+          <i><b>Advisors: </b><a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
+              Matthews</a>, <a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
+              Ziehl</a>, <a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+              Huhns</a>, <a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
+              McElwain</a></i><br>
 
           <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg"
               alt="Group Recommendation - Research Potential, Methods, and Fairness"
