--- a/teaming/index.html
+++ b/teaming/index.html
@@ -27,12 +27,15 @@
               style="background-color: cyan ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             AI Teaming and Fairness
           </h1>
-          <p><mark style="color:red;"><b>NEW!</b></mark> Our <a
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
+              style="color:red;"><b>NEW!</b></mark> Our <a
               href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
               href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
               style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <i>Innovative
               Application</i> award.</p>
+          
+              <hr>
 
           <p style="text-align: justify;">
           <h3><span style="background-color: aqua;"><b>Group Recommendation and
