--- a/teaming/index.html
+++ b/teaming/index.html
@@ -123,7 +123,7 @@
               McElwain</a></i><br>
 
           <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg"
-              alt="Group Recommendation - Research Potential, Methods, and Fairness"
+              alt="A poster of ULTRA."
               style="width:100%;max-width:80px;height:150px;">We introduce ULTRA (<b><u>U</u></b>niversity
             <b><u>L</u></b>ead <b><u>T</u></b>eam
             <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for
