--- a/teaming/index.html
+++ b/teaming/index.html
@@ -240,7 +240,7 @@
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a>
               <br>
               <p align="justify">Mapper is a tool that takes the input as a text and matching threshold as a number and
-                returns the ACM or JEL classification codes and description based on the input text. </p>
+                returns the <a href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or <a href="https://cran.r-project.org/web/classifications/JEL.html" target="_blank">JEL</a> classification codes and description based on the input text. </p>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
