--- a/teaming/index.html
+++ b/teaming/index.html
@@ -217,7 +217,8 @@
             </center>
 
           </ul>
-          <p><i><b>Additional Tools</b></i></p>
+
+          <h3><span style="background-color: aqua;"><b>Additional Tools</b></span></h3>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br>
               <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a>
