--- a/teaming/index.html
+++ b/teaming/index.html
@@ -34,8 +34,8 @@
               href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
               style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <i>Innovative
               Application</i> award.</p>
-          
-              <hr>
+
+          <hr>
 
           <p style="text-align: justify;">
           <h3><span style="background-color: aqua;"><b>Group Recommendation and
@@ -122,8 +122,7 @@
               href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
               McElwain</a></i><br>
 
-          <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg"
-              alt="A poster of ULTRA."
+          <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg" alt="A poster of ULTRA."
               style="width:100%;max-width:80px;height:150px;">We introduce ULTRA (<b><u>U</u></b>niversity
             <b><u>L</u></b>ead <b><u>T</u></b>eam
             <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for
@@ -219,6 +218,13 @@
           </ul>
 
           <h3><span style="background-color: aqua;"><b>Additional Tools</b></span></h3>
+          <i><b>Collaborators over the years: </b>
+            <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
+            <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav
+              Srivastava</a>,
+            Karan Aggarwal, <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja
+              Paladi</a>
+          </i><br>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br>
               <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a>
@@ -241,7 +247,9 @@
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a>
               <br>
               <p align="justify">Mapper is a tool that takes the input as a text and matching threshold as a number and
-                returns the <a href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or <a href="https://cran.r-project.org/web/classifications/JEL.html" target="_blank">JEL</a> classification codes and description based on the input text. </p>
+                returns the <a href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or
+                <a href="https://cran.r-project.org/web/classifications/JEL.html" target="_blank">JEL</a> classification
+                codes and description based on the input text. </p>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
