add demo video for kite

--- a/teaming/index.html
+++ b/teaming/index.html
@@ -238,9 +238,18 @@
                 from a general as well as a domain-dependent perspective consisting of holistic views, entity-centric
                 view, events view, domain-specific interpretation using industry taxonomies and a detailed full-text
                 view transparently connecting the document to insight elements.</p>
-              <center><img src="./images/kite.png" height="200" width="60%"><br>
-                <figcaption>Figure 3: Using KITE</figcaption>
+              <center>
+                <div style="position:relative;width:fit-content;height:fit-content;">
+                  <a style="position:absolute;top:20px;right:1rem;opacity:0.8;"
+                    href="https://clipchamp.com/watch/oPT2b3oHOAD?utm_source=embed&utm_medium=embed&utm_campaign=watch">
+                    <img loading="lazy" style="height:22px;" src="https://clipchamp.com/e.svg"
+                      alt="Made with Clipchamp" />
+                  </a>
+                  <iframe allow="autoplay;" allowfullscreen style="border:none"
+                    src="https://clipchamp.com/watch/oPT2b3oHOAD/embed" width="560" height="315"></iframe>
+                </div>
               </center>
+
             </li>
             <br>
             <li>[2022] A Text-to-Classification Mapper (Using ACM/JEL Subject Ontology Codes).<br>
@@ -249,7 +258,8 @@
               <p align="justify">Mapper is a tool that takes the input as a text and matching threshold as a number and
                 returns the <a href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or
                 <a href="https://cran.r-project.org/web/classifications/JEL.html" target="_blank">JEL</a> classification
-                codes and description based on the input text. </p>
+                codes and description based on the input text.
+              </p>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
