--- a/teaming/index.html
+++ b/teaming/index.html
@@ -225,6 +225,59 @@
             Karan Aggarwal, <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja
               Paladi</a>
           </i><br>
+
+          <p align="justify">Here, we describe some of the important tools that we have developed as part of the <a
+              href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">ULTRA</a>
+            effort. They started out as useful features that we then made into stand-alone capabilities recognizing
+            their potentia for wider usage:</p>
+          <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+            <li>
+              <p align="justify"><img id="myImg3" src="./images/kite.png"
+                  alt="KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration."
+                  style="width:100%;max-width:80px;height:60px;">KITE is an unsupervised system for exploring textual
+                data which can generate insights from a general as well as a domain-dependent perspective consisting of
+                holistic views, entity-centric view, events view, domain-specific interpretation using industry
+                taxonomies and a detailed full-text view transparently connecting the document to insight elements.</p>
+              <!-- The Modal -->
+              <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <img class="modal-content" id="img01">
+                <div id="caption"></div>
+              </div>
+
+              <script>
+                // Get the modal
+                var modal = document.getElementById("myModal");
+
+                // Get the image and insert it inside the modal - use its "alt" text as a caption
+                var img = document.getElementById("myImg3");
+                var modalImg = document.getElementById("img01");
+                var captionText = document.getElementById("caption");
+                img.onclick = function () {
+                  modal.style.display = "block";
+                  modalImg.src = this.src;
+                  captionText.innerHTML = this.alt;
+                }
+
+                // Get the <span> element that closes the modal
+                var span = document.getElementsByClassName("close")[0];
+
+                // When the user clicks on <span> (x), close the modal
+                span.onclick = function () {
+                  modal.style.display = "none";
+                }
+              </script>
+            </li>
+            <li>
+              <p align="justify">We also developed a <i>text-to-classification mapper</i>, a tool that takes the input
+                as a text and matching threshold as a number and returns the <a
+                  href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or <a
+                  href="https://cran.r-project.org/web/ classifications/JEL.html" target="_blank">JEL</a> classification
+                codes and description based on the input text.</p>
+            </li>
+          </ul>
+
+          <p><i><b>Representative Publications</b></i></p>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br>
               <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a>
@@ -233,11 +286,7 @@
                 target="_blank"><b>[Paper]</b></a>
               <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a>
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-              <br>
-              <p align="justify">KITE is an unsupervised system for exploring textual data which can generate insights
-                from a general as well as a domain-dependent perspective consisting of holistic views, entity-centric
-                view, events view, domain-specific interpretation using industry taxonomies and a detailed full-text
-                view transparently connecting the document to insight elements.</p>
+              <br><br>
               <center>
                 <div style="position:relative;width:fit-content;height:fit-content;">
                   <a style="position:absolute;top:20px;right:1rem;opacity:0.8;"
@@ -261,7 +310,7 @@
                 codes and description based on the input text.
               </p>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
-                <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
+                <figcaption>Figure 3: A demo of text-to-classification mapper.</figcaption>
               </center>
             </li>
           </ul>
