--- a/teaming/index.html
+++ b/teaming/index.html
@@ -304,12 +304,7 @@
             <li>[2022] A Text-to-Classification Mapper (Using ACM/JEL Subject Ontology Codes).<br>
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a>
               <br>
-              <p align="justify">Mapper is a tool that takes the input as a text and matching threshold as a number and
-                returns the <a href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or
-                <a href="https://cran.r-project.org/web/classifications/JEL.html" target="_blank">JEL</a> classification
-                codes and description based on the input text.
-              </p>
-              <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
+              <center><img src="./images/ultra_mapper.png" width="560" height="315"><br>
                 <figcaption>Figure 3: A demo of text-to-classification mapper.</figcaption>
               </center>
             </li>
