--- a/teaming/index.html
+++ b/teaming/index.html
@@ -234,7 +234,7 @@
             <li>
               <p align="justify"><img id="myImg3" src="./images/kite.png"
                   alt="KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration."
-                  style="width:100%;max-width:80px;height:45px;"><span style="color:violet">KITE</span> is an unsupervised system for exploring textual
+                  style="width:100%;max-width:80px;height:45px;"><span style="color:violet">KITE (right)</span> is an unsupervised system for exploring textual
                 data which can generate insights from a general as well as a domain-dependent perspective consisting of
                 holistic views, entity-centric view, events view, domain-specific interpretation using industry
                 taxonomies and a detailed full-text view transparently connecting the document to insight elements.</p>
