--- a/teaming/index.html
+++ b/teaming/index.html
@@ -234,7 +234,8 @@
             <li>
               <p align="justify"><img id="myImg3" src="./images/kite.png"
                   alt="KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration."
-                  style="width:100%;max-width:80px;height:45px;"><span style="color:violet">KITE (right)</span> is an unsupervised system for exploring textual
+                  style="width:100%;max-width:80px;height:45px;"><span style="color:violet">KITE (right)</span> is an
+                unsupervised system for exploring textual
                 data which can generate insights from a general as well as a domain-dependent perspective consisting of
                 holistic views, entity-centric view, events view, domain-specific interpretation using industry
                 taxonomies and a detailed full-text view transparently connecting the document to insight elements.</p>
@@ -269,7 +270,8 @@
               </script>
             </li>
             <li>
-              <p align="justify">We also developed a <span style="color:violet"><i>text-to-classification mapper</i></span>, a tool that takes the input
+              <p align="justify">We also developed a <span style="color:violet"><i>text-to-classification
+                    mapper</i></span>, a tool that takes the input
                 as a text and matching threshold as a number and returns the <a
                   href="https://cran.r-project.org/web/classifications/ACM.html" target="_blank">ACM</a> or <a
                   href="https://cran.r-project.org/web/ classifications/JEL.html" target="_blank">JEL</a> classification
