--- a/teaming/index.html
+++ b/teaming/index.html
@@ -50,7 +50,7 @@
           </p>
           <p align="justify"><img id="myImg" src="images/group_recommendation.jpg"
               alt="Group Recommendation - Research Potential, Methods, and Fairness"
-              style="width:100%;max-width:80px">We study the problem of group recommendation, an information exploration
+              style="width:100%;max-width:100px;height:120px;">We study the problem of group recommendation, an information exploration
             paradigm that retrieves interesting items for users based on their profiles and past
             interactions/activities/history. Existing literature encourages using greedy methods, genetic and heuristic
             algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to build
@@ -123,7 +123,7 @@
               McElwain</a></i><br>
 
           <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg" alt="A poster of ULTRA."
-              style="width:100%;max-width:80px;height:150px;">We introduce ULTRA (<b><u>U</u></b>niversity
+              style="width:100%;max-width:100px;height:150px;">We introduce ULTRA (<b><u>U</u></b>niversity
             <b><u>L</u></b>ead <b><u>T</u></b>eam
             <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for
             assisting team formation when researchers respond to RFPs from funding agencies. This is an instance of the
@@ -234,7 +234,7 @@
             <li>
               <p align="justify"><img id="myImg3" src="./images/kite.png"
                   alt="KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration."
-                  style="width:100%;max-width:80px;height:45px;"><span style="color:violet">KITE (right)</span> is an
+                  style="width:100%;max-width:100px;height:48px;"><span style="color:violet">KITE (right)</span> is an
                 unsupervised system for exploring textual
                 data which can generate insights from a general as well as a domain-dependent perspective consisting of
                 holistic views, entity-centric view, events view, domain-specific interpretation using industry
