--- a/teaming/index.html
+++ b/teaming/index.html
@@ -32,8 +32,9 @@
               href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
               href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
-              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <span style="color:violet"><i>Innovative
-              Application</i></span> award.</p>
+              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <span
+              style="color:violet"><i>Innovative
+                Application</i></span> award.</p>
 
           <hr>
 
@@ -50,7 +51,8 @@
           </p>
           <p align="justify"><img id="myImg" src="images/group_recommendation.jpg"
               alt="Group Recommendation - Research Potential, Methods, and Fairness"
-              style="width:100%;max-width:100px;height:120px;">We study the problem of group recommendation, an information exploration
+              style="width:100%;max-width:100px;height:120px;">We study the problem of group recommendation, an
+            information exploration
             paradigm that retrieves interesting items for users based on their profiles and past
             interactions/activities/history. Existing literature encourages using greedy methods, genetic and heuristic
             algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to build
