--- a/teaming/index.html
+++ b/teaming/index.html
@@ -28,6 +28,10 @@
             AI Teaming and Fairness
           </h1>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
+            style="color:red;"><b>NEW!</b></mark> Our <a
+            href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">demo paper</a> about deploying ULTRA in two geographical regions of the world has been accepted to <a
+            href="https://cods-comad.in/call-for-demo-track-papers.php" style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
               style="color:red;"><b>NEW!</b></mark> Our <a
               href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
@@ -165,11 +169,18 @@
 
           <p><i><b>Representative Publications</b></i></p>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+            <li>[2023] ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals.
+              <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD)</i><br>
+              <!--<a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>-->
+              <!--<a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>-->
+              [Paper - TBD]
+              <br><br>
+            </li>
+            
             <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call
               for Proposals
               <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence
                 (IAAI-24)</i><br>
-
               <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
                   href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b>
               <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a
