--- a/teaming/index.html
+++ b/teaming/index.html
@@ -29,8 +29,7 @@
           </h1>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
             style="color:red;"><b>NEW!</b></mark> Our <a
-            href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">demo paper</a> about deploying ULTRA in two geographical regions of the world has been accepted to <a
-            href="https://cods-comad.in/call-for-demo-track-papers.php" style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
+            href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">demo paper</a> about deploying <a href="https://ai4society.github.io/teaming/#:~:text=We%20introduce%20ULTRA,others%20can%20use.>">ULTRA</a> in two geographical regions of the world has been accepted to <a href="https://cods-comad.in/call-for-demo-track-papers.php" style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
               style="color:red;"><b>NEW!</b></mark> Our <a
               href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
