--- a/teaming/index.html
+++ b/teaming/index.html
@@ -232,7 +232,7 @@
           </i><br>
 
           <p align="justify">Here, we describe some of the important tools that we have developed as part of the <a
-              href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">ULTRA</a>
+              href="https://ai4society.github.io/teaming/#:~:text=can%20be%20enlarged).-,Team%20Formation,-Technical%20Lead%3A">ULTRA</a>
             effort. They started out as useful features that we then made into stand-alone capabilities recognizing
             their potentia for wider usage:</p>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
