--- a/teaming/index.html
+++ b/teaming/index.html
@@ -172,7 +172,7 @@
               <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD)</i><br>
               <!--<a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>-->
               <!--<a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>-->
-              [Paper - TBD]
+              [Paper - <span style="color:violet"><i>Coming Soon</i></span>]
               <br><br>
             </li>
             
