--- a/teaming/index.html
+++ b/teaming/index.html
@@ -169,7 +169,7 @@
           <p><i><b>Representative Publications</b></i></p>
           <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
             <li>[2023] ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals.
-              <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD)</i><br>
+              <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD-2024)</i><br>
               <!--<a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>-->
               <!--<a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>-->
               [Paper - <span style="color:red"><i>Coming Soon</i></span>]
