--- a/demos/index.html
+++ b/demos/index.html
@@ -25,7 +25,7 @@
                         <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                         <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                         <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                        <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
+                        <a href='../funding/index.html'>Funding</a>
 
                     </p>
                 </td>
