--- a/demos/index.html
+++ b/demos/index.html
@@ -25,7 +25,7 @@
                         <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                         <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                         <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                        <a href='../funding/index.html'>Funding</a>
+                        <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
 
                     </p>
                 </td>
@@ -50,8 +50,8 @@
       <div style="margin: 0 auto;" class="container">
         <br>
         <div style="display:flex;justify-content: center;gap:0px;">
-          <div style="flex:0.6">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/8MUtxsfVNIU"
+          <div style="flex:0.8">
+            <iframe width="400" height="200" src="https://www.youtube.com/embed/8MUtxsfVNIU"
               title="Demo of ULTRA Tool: Team Recommendation for Researchers for Responding to Calls for Proposals"
               frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
@@ -65,15 +65,16 @@
               rel="noopener noreferrer">[Paper]</a>
             <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank">[Demo Video]</a>
             <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">[Tool]</a>
-            <a href="../teaming/bib/ultra.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <a href="../projects/teaming/bib/ultra.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a>
           </div>
         </div>
         <br>
         <br>
 
         <div style="display:flex;justify-content: center;gap:0px;">
-          <div style="flex:0.6">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/X2l7eW6dyBc"
+          <div style="flex:0.8">
+            <iframe width="400" height="200" src="https://www.youtube.com/embed/X2l7eW6dyBc"
               title="PRUDENT ICAPS Demo"
               frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
@@ -83,14 +84,15 @@
             <p>We present a generic approach for dialogs for information retrieval based on automated planning within a reinforcement learning (RL)-based platform, ParlAI.</p>
             <a href="https://prl-theworkshop.github.io/prl2021/papers/PRL2021_paper_28.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>
             <a href="https://github.com/ai4society/PRUDENT" target="_blank" rel="noopener noreferrer">[Github]</a> 
-            <a href="../generalized_planning/bib/prudent_demo.txt" target="_blank" type="text/plain">[BibTex]</a> 
+            <a href="../projects/generalized_planning/bib/prudent_demo.txt" target="_blank" type="text/plain">[BibTex]</a> 
+            <a href="../projects/generalized_planning/index.html" target="_blank" type="text/plain">[More Details]</a>
           </div>
         </div>        
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:0px;">
-          <div style="flex:0.6">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/-0aKDVoEGvs" title="Allure Demo"
+          <div style="flex:0.8">
+            <iframe width="400" height="200" src="https://www.youtube.com/embed/-0aKDVoEGvs" title="Allure Demo"
               frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </div>
@@ -99,14 +101,15 @@
             <p>We demonstrate ALLURE, an educational AI system for learning to solve the Rubik’s cube that is designed to help students improve their problem solving skills.</p>
             <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21722" target="_blank" rel="noopener noreferrer">[Paper]</a>
             <a href="https://www.youtube.com/embed/-0aKDVoEGvs" target="_blank">[Demo Video]</b></a>
-            <a href="../rubiks_cube/bib/allure_aaai.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <a href="../projects/rubiks_cube/bib/allure_aaai.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <a href="../projects/rubiks_cube/index.html" target="_blank" type="text/plain">[More Details]</a>
           </div>
         </div>        
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:0px;">
-          <div style="flex:0.6">
-            <img src='../images/1pg.png' height="250" width="400">
+          <div style="flex:0.8">
+            <img src='../images/1pg.png' width="400" height="200">
           </div>
           <div style="flex:1">
             <h3 class="card-text">KITE: An Unsupervised, Effective and Inclusive Approach for
@@ -115,7 +118,8 @@
               <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>  
               <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank">[Demo Video]</b></a>
             <a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">[Tool]</a>
-            <a href="../teaming/bib/kite.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <a href="../projects/teaming/bib/kite.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
               <br>
             <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
           </div>
@@ -123,8 +127,8 @@
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:15px;">
-          <div style="flex:0.6">
-            <img src='../images/univ.PNG' height="250" width="400">
+          <div style="flex:0.8">
+            <img src='../images/univ.PNG' width="400" height="200">
           </div>
           <div style="flex:1">
             <h3 class="card-text">EDU Chatbot<span class="tag tag-method">Chatbots</span></h3>
@@ -132,7 +136,8 @@
             <!-- <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>   -->
             <!-- <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank">[Demo Video]</b></a> -->
             <a href="http://casy.cse.sc.edu/chatbot_univ/" target="_blank" rel="noopener noreferrer">[Website]</a>
-            <a href="../rating_page/bib/mm_sas.txt" target="_blank" type="text/plain">[BibTex]</a> 
+            <a href="../projects/rating_page/bib/mm_sas.txt" target="_blank" type="text/plain">[BibTex]</a> 
+            <a href="../projects/rating_page/index.html" target="_blank" type="text/plain">[More Details]</a>
               <br>
             <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
           </div>
@@ -140,14 +145,14 @@
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:15px;">
-          <div style="flex:0.6">
-            <img src='../images/ecsc.PNG' height="250" width="400">
+          <div style="flex:0.8">
+            <img src='../images/ecsc.PNG' width="400" height="200">
           </div>
           <div style="flex:1">
             <h3 class="card-text">ElectionBot for South Carolina<span class="tag tag-method">Chatbots</span></h3>
             <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank" rel="noopener noreferrer">[Paper]</a>
             <a href="http://casy.cse.sc.edu/Election-Chatbot-SC-main/" target="_blank" rel="noopener noreferrer">[Tool]</a>
-            <a href="../rating_page/bib/SafeChat_AI_Mag.txt" target="_blank" type="text/plain">[BibTex]</a>   
+            <a href="../projects/rating_page/bib/SafeChat_AI_Mag.txt" target="_blank" type="text/plain">[BibTex]</a>   
             
             <br>
             <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
@@ -156,14 +161,14 @@
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:15px;">
-          <div style="flex:0.6">
-            <img src='../images/ecms.PNG' height="250" width="400">
+          <div style="flex:0.8">
+            <img src='../images/ecms.PNG' width="400" height="200">
           </div>
           <div style="flex:1">
             <h3 class="card-text">ElectionBot for Mississippi<span class="tag tag-method">Chatbots</span></h3>
             <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank" rel="noopener noreferrer">[Paper]</a>
             <a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank" rel="noopener noreferrer">[Tool]</a>
-            <a href="../rating_page/bib/SafeChat_AI_Mag.txt" target="_blank" type="text/plain">[BibTex]</a>     
+            <a href="../projects/rating_page/bib/SafeChat_AI_Mag.txt" target="_blank" type="text/plain">[BibTex]</a>     
             <br>
             <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
           </div>
@@ -171,28 +176,31 @@
         <br>
         <br>
         <div style="display:flex;justify-content: center;gap:15px;">
-          <div style="flex:0.6">
-         <iframe width="400" height="250" src="https://www.youtube.com/embed/_1rlctCGsrk" title="Plansformer Tool" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div style="flex:0.8">
+         <iframe width="400" height="200" src="https://www.youtube.com/embed/_1rlctCGsrk" title="Plansformer Tool" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
          <div style="flex:1">
            <h3 class="card-text">Plansformer Tool: Demonstrating Generation of Symbolic Plans using Transformers, 2023<span class="tag tag-method">Automated Planning</span></h3>
            <p>We introduce Plansformer; an LLM fine-tuned on planning problems and capable of generating plans with favorable behavior in terms of correctness and length with reduced knowledge-engineering efforts.</p>
            <a href="https://arxiv.org/abs/2212.08681" target="_blank" rel="noopener noreferrer">[Paper]</a>
-           <a href="../generalized_planning/bib/plansformer.txt" target="_blank" type="text/plain">[BibTex]</a> 
+           <a href="../projects/generalized_planning/bib/plansformer.txt" target="_blank" type="text/plain">[BibTex]</a> 
+           <a href="../projects/generalized_planning/index.html" target="_blank" type="text/plain">[More Details]</a>
            
           </div>
         </div>  
         <br> 
         <br>
         <div style="display:flex;justify-content: center;gap:15px;">
-          <div style="flex:0.6">
-         <iframe width="400" height="250" src="https://www.youtube.com/embed/L90reK3_fk4" title="Solving the Rubik's Cube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div style="flex:0.8">
+         <iframe width="400" height="200" src="https://www.youtube.com/embed/L90reK3_fk4" title="Solving the Rubik's Cube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
          <div style="flex:1">
            <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner, 2023<span class="tag tag-method">Neural-Symbolic AI</span></h3>
            <p>In this demonstration, we introduce the first PDDL formulation for the 3-dimension RC and solve it with an off-the-shelf Fast-Downward planner. We also create a plan executor and visualizer to show how the plan achieves the intended goal.</p>
            <a href="https://www.researchgate.net/publication/362555735_Solving_the_Rubik%27s_Cube_with_a_PDDL_Planner" target="_blank" rel="noopener noreferrer">[Paper]</a>
-           <a href="../rubiks_cube/bib/rubiks-pddl.txt" target="_blank" type="text/plain">[BibTex]</a> 
+           <a href="../projects/rubiks_cube/bib/rubiks-pddl.txt" target="_blank" type="text/plain">[BibTex]</a> 
+           <a href="../projects/rubiks_cube/index.html" target="_blank" type="text/plain">[More Details]</a>
+
        </div>
       </div>
       </div>
