--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
                   <div class="slideshow-container">
                     <!-- Full-width images with number text -->
                     <div class="mySlides">
-                      <img src="images/team.jpg" style="width:100%">
-                      <div class="caption">Team Lunch</div>
+                      <img src="images/aaai23.jpg" style="width:100%">
+                      <div class="caption">AI4Society @ AAAI 2023</div>
                     </div>
                 
                     <div class="mySlides">
                       <img src="images/team_2023_spring.jpg" style="width:100%">
                       <div class="caption">Team Lunch - Spring '23</div>
+                    </div>
+
+                    <div class="mySlides">
+                      <img src="images/aaai23_elections.JPG" style="width:100%">
+                      <div class="caption">AI for Credible Elections Workshop</div>
                     </div>
                 
                     <div class="mySlides">
