--- a/publications/index.html
+++ b/publications/index.html
@@ -38,11 +38,9 @@
                         <div class="sub-topics">
                             <p>Conference</p>
                             <p>Journal</p>
-                            <p>Symposium</p>
                             <p>Workshop</p>
                             <p>Demo</p>
                             <p>Tutorial</p>
-                            <p>Book</p>
                             <p>Preprint</p>
                         </div>
                     </div>
@@ -186,7 +184,7 @@
                             <i>AAAI Spring Symposium 2023</i><br>
                             Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta<br>
                             <a href='https://arxiv.org/pdf/2302.09079.pdf' target="_blank">[Paper]</a>
-                            <span class="tag tag-type">Symposium</span>
+                            <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
 
